--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,7 @@ updates:
       - "github-actions"
       - "automated pr"
       - "non-owner pull request"
+    open-pull-requests-limit: 10
 
   - package-ecosystem: "npm"
     directory: "/"
@@ -25,6 +26,7 @@ updates:
       - "automated pr"
       - "javascript"
       - "non-owner pull request"
+    open-pull-requests-limit: 10
 
  # - package-ecosystem: "pip"
  #   directory: "/"
