--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -53,33 +53,21 @@ jobs:
           tag_name: ${{ steps.bump_version.outputs.new_tag }}
           prerelease: Release ${{ steps.bump_version.outputs.new_tag }}
           body: |
-            This is a new release ${{ steps.bump_version.outputs.new_tag }} which will include 
-            ${
-              if [[ "${{ steps.get_pr_title.outputs.title }}" == *"Major"* ]]; then
-                echo "feature updates."
-              elif [[ "${{ steps.get_pr_title.outputs.title }}" == *"Minor"* ]]; then
-                echo "bug fixes and minor updates."
-              else
-                echo "bug fixes."
-              fi
-            }
+            This is a new release ${{ steps.bump_version.outputs.new_tag }} which will include the following changes: ${{ steps.get_pr_title.outputs.title }}
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
           
-    
   ChangeLog_Enforcer:
     runs-on: ubuntu-latest
-    needs: [create_release]
+    needs: [ create_release ]
 
     permissions:
-      # Give the default GITHUB_TOKEN write permission to commit and push the
-      # updated CHANGELOG back to the repository.
-      # https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/
       contents: write
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Python Action
+        uses: jge162/Action-workflows@1.1.1
+ 
         with:
           ref: main
 
