--- a/.github/workflows/comment_on_issue.yml
+++ b/.github/workflows/comment_on_issue.yml
@@ -21,7 +21,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ["non owner issue"]
+              labels: ["new issue"]
             })
       - name: Comment on Issues
         uses: actions/github-script@v6
