--- a/.github/workflows/auto_aprove_geo4u.yml
+++ b/.github/workflows/auto_aprove_geo4u.yml
@@ -17,7 +17,8 @@ jobs:
         with:
           github-token: "${{ secrets.WORKFLOW_SECRET }}"
       - name: Approve a PR
-        run: gh pr review --approve "$PR_URL"
+        run: |
+          export GH_TOKEN="${{ secrets.WORKFLOW_SECRET }}"
+          gh pr review --approve "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET}}
