--- a/.github/workflows/auto_aprove_geo4u.yml
+++ b/.github/workflows/auto_aprove_geo4u.yml
@@ -15,10 +15,10 @@ jobs:
         # uses: dependabot/fetch-metadata@v1
         uses: jge162/Action-workflows@1.1.1
         with:
-          github-token: "${{ secrets.WORKFLOW_SECRET }}"
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Approve a PR
         run: |
-          export GH_TOKEN="${{ secrets.WORKFLOW_SECRET }}"
+          export GH_TOKEN="${{ secrets.GITHUB_TOKEN }}"
           gh pr review --approve "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
