--- a/.github/workflows/auto_aprove_geo4u.yml
+++ b/.github/workflows/auto_aprove_geo4u.yml
@@ -16,9 +16,8 @@ jobs:
         uses: jge162/Action-workflows@1.1.1
         with:
           github-token: "${{ secrets.WORKFLOW_SECRET }}"
-      - name: Approve a PR
-        run: |
-          export GH_TOKEN="${{ secrets.WORKFLOW_SECRET }}"
-          gh pr review --approve "$PR_URL"
+     - name: Approve a PR
+        run: gh pr review --approve "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET}}
