--- a/.github/workflows/auto_aprove_geo4u.yml
+++ b/.github/workflows/auto_aprove_geo4u.yml
@@ -12,11 +12,10 @@ jobs:
     steps:
       - name: Dependabot metadata
         id: metadata
-        # uses: dependabot/fetch-metadata@v1
-        uses: jge162/Action-workflows@1.1.1
+        uses: dependabot/fetch-metadata@v1
         with:
           github-token: "${{ secrets.WORKFLOW_SECRET }}"
-     - name: Approve a PR
+      - name: Approve a PR
         run: gh pr review --approve "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
