--- a/.github/workflows/auto_aprove_geo4u.yml
+++ b/.github/workflows/auto_aprove_geo4u.yml
@@ -21,4 +21,4 @@ jobs:
         run: gh pr review --approve "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          token: "${{ secrets.WORKFLOW_SECRET }}" # <-- Updated
+          GH_TOKEN: "${{ secrets.WORKFLOW_SECRET }}" # <-- Updated
