--- a/action.yaml
+++ b/action.yaml
@@ -21,6 +21,9 @@ branding:
   token:
       description: Personal access token.
       default: ${{ github.token }} # <-- Updated
+  GH_TOKEN:
+      description: Personal access token. # FOR ENV: USE
+      default: ${{ github.token }} # <-- Updated
   ssh-key:
     description: SSH key for authentication.
   ssh-known-hosts:
