--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -10,11 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Run tests
-        run: echo "Running tests"
-        env:
-          RERUN: ${{ github.event_name == 'issue_comment' && contains(github.event.comment.body, 'rerun build') }}
-          RUN_NAME: ${{ github.event_name == 'pull_request' && github.head_ref }}
+      - name: Check if rerun is requested
+        run: echo "RERUN=${{ github.event_name == 'issue_comment' && contains(github.event.comment.body, 'rerun build') }}" >> $GITHUB_ENV
+      - name: Check if pull request
+        if: github.event_name == 'pull_request'
+        run: echo "RUN_NAME=${{ github.head_ref }}" >> $GITHUB_ENV
+      - name: Rerun workflow
         if: env.RERUN == 'true'
-        with:
-          run-id: ${{ github.run_id }}
+        run: echo "Rerunning workflow"
+        env:
+          RUN_ID: ${{ github.run_id }}
