--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -1,8 +1,8 @@
 name: Auto-merge Owner only
 
 on:
-  pull_request:
-  
+  # pull_request:
+  workflow_dispatch:
 permissions:
   contents: write
   pull-requests: write
