--- a/.github/workflows/rerun_build.yml
+++ b/.github/workflows/rerun_build.yml
@@ -23,22 +23,21 @@ jobs:
           done
       - name: Rerun workflow
         if: env.RERUN == 'true'
-        run: echo "Rerunning workflow"
         env:
           RUN_ID: ${{ github.run_id }}
+        run: echo "Rerunning workflow"
         concurrency:
-          group: ${{ format('{0}-{1}', github.head_ref, env.ISSUE_NUMBER) }}
+          group: ${{ format('rerun-{0}', env.ISSUE_NUMBER) }}
+          cancel-in-progress: true
       - name: Unlock workflow
         run: |
           curl -s -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/lock"
-
   build:
     runs-on: ubuntu-latest
     needs: tests
     steps:
       - name: Build application
         run: echo "Building application"
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
