--- a/.github/workflows/rerun_build.yml
+++ b/.github/workflows/rerun_build.yml
@@ -26,21 +26,31 @@ jobs:
         env:
           RUN_ID: ${{ github.run_id }}
         run: echo "Rerunning workflow"
-        concurrency:
-          group: ${{ format('rerun-{0}', env.ISSUE_NUMBER) }}
-          cancel-in-progress: true
       - name: Unlock workflow
         run: |
           curl -s -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/lock"
+
   build:
     runs-on: ubuntu-latest
     needs: tests
     steps:
       - name: Build application
         run: echo "Building application"
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Deploy application
         run: echo "Deploying application"
+        
+  rerun:
+    runs-on: ubuntu-latest
+    needs: tests
+    if: env.RERUN == 'true'
+    concurrency:
+      group: ${{ format('rerun-{0}', env.ISSUE_NUMBER) }}
+      cancel-in-progress: true
+    steps:
+      - name: Rerun workflow
+        run: echo "Rerunning workflow"
