--- a/.github/workflows/rerun_build.yml
+++ b/.github/workflows/rerun_build.yml
@@ -23,8 +23,6 @@ jobs:
           done
       - name: Rerun workflow
         if: env.RERUN == 'true'
-        env:
-          RUN_ID: ${{ github.run_id }}
         run: echo "Rerunning workflow"
       - name: Unlock workflow
         run: |
@@ -43,11 +41,13 @@ jobs:
     steps:
       - name: Deploy application
         run: echo "Deploying application"
-        
+
   rerun:
     runs-on: ubuntu-latest
     needs: tests
     if: env.RERUN == 'true'
+    env:
+      ISSUE_NUMBER: ${{ github.event.pull_request.number }}
     concurrency:
       group: ${{ format('rerun-{0}', env.ISSUE_NUMBER) }}
       cancel-in-progress: true
