--- a/.github/workflows/rerun_build.yml
+++ b/.github/workflows/rerun_build.yml
@@ -23,11 +23,14 @@ jobs:
           done
       - name: Rerun workflow
         if: env.RERUN == 'true'
+        env:
+          RUN_ID: ${{ github.run_id }}
+        concurrency:
+          group: ${{ format('rerun-{0}', env.ISSUE_NUMBER) }}
         run: echo "Rerunning workflow"
       - name: Unlock workflow
         run: |
           curl -s -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/lock"
-
   build:
     runs-on: ubuntu-latest
     needs: tests
@@ -41,16 +44,3 @@ jobs:
     steps:
       - name: Deploy application
         run: echo "Deploying application"
-
-  rerun:
-    runs-on: ubuntu-latest
-    needs: tests
-    if: env.RERUN == 'true'
-    env:
-      ISSUE_NUMBER: ${{ github.event.pull_request.number }}
-    concurrency:
-      group: ${{ format('rerun-{0}', env.ISSUE_NUMBER) }}
-      cancel-in-progress: true
-    steps:
-      - name: Rerun workflow
-        run: echo "Rerunning workflow"
