--- a/.github/workflows/rerun_build.yml
+++ b/.github/workflows/rerun_build.yml
@@ -1,5 +1,4 @@
-name: Rerun Pull Requests
-
+name: rerun Pull Requests
 on:
   pull_request:
     types: [opened, synchronize]
@@ -9,37 +8,15 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        issue_number: [${{ github.event.pull_request.number }}]
     steps:
       - uses: actions/checkout@v2
       - name: Check if rerun is requested
-        run: echo "RERUN=${{ github.event_name == 'issue_comment' && contains(github.event.comment.body, 'rerun build') }}" >> $GITHUB_ENV
-      - name: Lock workflow
-        run: |
-          while ! curl -s -X PUT -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -d '{"lock_reason":"rerun"}' "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/lock"; do
-            sleep 5
-          done
+        run: echo "RERUN=${{ github.event_name == 'issue_comment' && contains(github.event.comment.body, 'rerun build') && contains(github.event.issue.number, ${{ github.event.comment.issue_number }}) }}" >> $GITHUB_ENV
+      - name: Check if pull request
+        if: github.event_name == 'pull_request'
+        run: echo "RUN_NAME=${{ github.ref }}" >> $GITHUB_ENV
       - name: Rerun workflow
         if: env.RERUN == 'true'
+        run: echo "Rerunning workflow"
         env:
           RUN_ID: ${{ github.run_id }}
-        run: echo "Rerunning workflow"
-        concurrency:
-          group: ${{ format('rerun-{0}', matrix.issue_number) }}
-      - name: Unlock workflow
-        run: |
-          curl -s -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/lock"
-  build:
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - name: Build application
-        run: echo "Building application"
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy application
-        run: echo "Deploying application"
