--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -30,8 +30,9 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Python Action
-        uses: jge162/Action-workflows@2.1.1
+      - name: Action
+        # uses: jge162/Action-workflows@2.1.1
+        uses: actions/checkout@v2
 
       - name: Get pull request number
         id: get_pull_request_number
