--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Python Action
         uses: jge162/Action-workflows@2.1.0
+        with:
+          token: ${{ secrets.WORKFLOW_SECRET }}
 
       - name: Get latest tag
         run: |
@@ -67,8 +69,8 @@ jobs:
     steps:
       - name: Python Action
         uses: jge162/Action-workflows@2.1.0
- 
         with:
+          token: ${{ secrets.WORKFLOW_SECRET }}
           ref: main
 
       - name: Get latest version
