--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -15,10 +15,8 @@ jobs:
         id: get_pr_title
         run: echo "::set-output name=title::${{ github.event.pull_request.title }}"
 
-      - name: Python Action
-        uses: jge162/Action-workflows@2.1.0
-        with:
-          token: ${{ secrets.WORKFLOW_SECRET }}
+      - name: Action
+        uses: actions/checkout@v2
 
       - name: Get latest tag
         run: |
@@ -67,10 +65,9 @@ jobs:
       contents: write
 
     steps:
-      - name: Python Action
-        uses: jge162/Action-workflows@2.1.0
+      - name: Action
+        uses: actions/checkout@v2
         with:
-          token: ${{ secrets.WORKFLOW_SECRET }}
           ref: main
 
       - name: Get latest version
