--- a/action.yaml
+++ b/action.yaml
@@ -22,9 +22,9 @@ branding:
     token:
       description: Personal access token.
       required: false
-    GH_TOKEN:
-      description: Personal access token.
-      required: false
+    # GH_TOKEN:
+    #   description: Personal access token.
+    #   required: false
    ssh-key:
       description: SSH key for authentication.
     ssh-known-hosts:
