--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -18,8 +18,8 @@ jobs:
     steps:
     - name: Python Action
       uses: jge162/Action-workflows@2.1.0
-      with:
-        token: ${{ secrets.WORKFLOW_SECRET }}
+      # with:
+      #   token: ${{ secrets.WORKFLOW_SECRET }}
       
     - run: |
        echo "Install required dependencies"
