--- a/.github/workflows/rerun_build.yml
+++ b/.github/workflows/rerun_build.yml
@@ -18,8 +18,11 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'jge162' }}
     steps:
-      # - uses: jge162/Action-workflows@2.1.1
-      - uses: actions/checkout@v2
+      - name: Python Action
+      - uses: jge162/Action-workflows@2.1.1
+      # - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.WORKFLOW_SECRET }}
       - name: Check if rerun is requested
         if: github.event_name == 'issue_comment'
         env:
