--- a/.github/workflows/rerun_build.yml
+++ b/.github/workflows/rerun_build.yml
@@ -19,7 +19,7 @@ jobs:
     if: ${{ github.actor == 'jge162' }}
     steps:
       - name: Python Action
-        uses: jge162/Action-workflows@2.1.0
+      - uses: jge162/Action-RunScript@2.0.0
       # - uses: actions/checkout@v2
         with:
           token: ${{ secrets.WORKFLOW_SECRET }}
