--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,10 @@ name: Python Action
 description: Quickly run your Python code and verify it is error-free
 author: Jeremy Escobar
 branding:
-  inputs:
+  icon: play-circle
+  color: purple
+
+inputs:
   repo-token:
     description: Access token.
     required: true
@@ -19,11 +22,11 @@ branding:
     description: Checkout reference.
     default: ${{ github.event.ref }}
   token:
-      description: Personal access token.
-      default: ${{ github.token }} 
+    description: Personal access token.
+    default: ${{ github.token }} 
   GH_TOKEN:
-      description: Personal access token. 
-      default: ${{ github.token }} 
+    description: Personal access token. 
+    default: ${{ github.token }} 
   ssh-key:
     description: SSH key for authentication.
   ssh-known-hosts:
@@ -56,6 +59,13 @@ branding:
     required: true
 
 runs:
-  using: node16
-  main: dist/index.js
-  post: dist/index.js
+  using: 'composite'
+  steps:
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+    - name: Run Python script
+      run: python your_script.py
