--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,7 @@ name: Python Action
 description: Quickly run your Python code and verify it is error-free
 author: Jeremy Escobar
 branding:
-  icon: play-circle
-  color: purple
-
-inputs:
+  inputs:
   repo-token:
     description: Access token.
     required: true
@@ -22,11 +19,11 @@ inputs:
     description: Checkout reference.
     default: ${{ github.event.ref }}
   token:
-    description: Personal access token.
-    default: ${{ github.token }} 
+      description: Personal access token.
+      default: ${{ github.token }} 
   GH_TOKEN:
-    description: Personal access token. 
-    default: ${{ github.token }} 
+      description: Personal access token. 
+      default: ${{ github.token }} 
   ssh-key:
     description: SSH key for authentication.
   ssh-known-hosts:
@@ -59,13 +56,6 @@ inputs:
     required: true
 
 runs:
-  using: 'composite'
-  steps:
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: pip install -r requirements.txt
-    - name: Run Python script
-      run: python your_script.py
+  using: node16
+  main: dist/index.js
+  post: dist/index.js
