--- a/.github/workflows/maintenance_pull_request.yml
+++ b/.github/workflows/maintenance_pull_request.yml
@@ -2,7 +2,7 @@ name: Keep main branch up_to_date
 
 on:
   schedule:
-    - cron: '0 0 1 * *' # Run every Sunday at 12 PM UTC
+    - cron: '0 0 1 * *' # Run once a month at 12 PM UTC
   workflow_dispatch:
 
 jobs:
