--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.0",
-    "@zeit/ncc": "^0.22.3",>>>>>>> main
+    "@zeit/ncc": "^0.22.3",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.4.2",
     "jest-circus": "^29.4.2",
