--- a/.github/workflows/GitHub_Status.yml
+++ b/.github/workflows/GitHub_Status.yml
@@ -1,7 +1,7 @@
 name: GitHub Status
 on:
   schedule:
-    - cron: '0 1,13 * * *' # Runs at 1 AM and 1 PM UTC every day
+    - cron: ${{ secrets.CRON_SECRET }}
   workflow_dispatch:
   
 jobs:
