--- a/.github/workflows/GitHub_Status.yml
+++ b/.github/workflows/GitHub_Status.yml
@@ -1,7 +1,7 @@
 name: GitHub Status
 on:
   schedule:
-    - cron: ${{ secrets.CRON_SECRET }}
+    - cron: ${{ env.CRON_EXPRESSION }}
   workflow_dispatch:
   
 jobs:
